# alpaca-golden-cross-screener

./: .env.example  .gitignore  README.md  pyproject.toml
alpaca_screener/: __init__.py  alpaca_data.py  cli.py  strategy.py  universe.py
notebooks/: alpaca_golden_cross_screener.ipynb
tests/: test_alpaca_data.py  test_strategy.py  test_universe.py
