[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alpaca-golden-cross-screener"
version = "0.1.0"
description = "Alpaca Markets stock screener for recent golden crosses confirmed by volume."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alpaca-py>=0.30.0",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
notebook = ["ipykernel>=6.29.0", "matplotlib>=3.8.0"]

[project.scripts]
alpaca-golden-cross = "alpaca_screener.cli:main"

[tool.setuptools.packages.find]
include = ["alpaca_screener*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
